--- a/packages/zod-request/package.json
+++ b/packages/zod-request/package.json
@@ -30,6 +30,7 @@
   "files": [
     "dist"
   ],
+  "types": "./dist/zod-request.d.ts",
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
