--- a/packages/zod-request/package.json
+++ b/packages/zod-request/package.json
@@ -35,14 +35,17 @@
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
-    "test": "vitest run"
+    "test": "vitest run",
+    "coverage": "vitest run --coverage"
   },
   "peerDependencies": {
     "zod": "^4.0.0"
   },
   "devDependencies": {
-    "zod": "^4.0.0",
+    "@vitest/coverage-v8": "3.2.4",
     "typescript": "^5.9.2",
-    "vitest": "^3.0.8"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^3.0.8",
+    "zod": "^4.0.0"
   }
 }
