Update GitHub Actions workflow to run coverage tests and upload reports to Codecov
- Changed the test command from `pnpm test` to `pnpm coverage` to focus on coverage metrics.
- Added a step to upload coverage reports to Codecov, enhancing visibility into test coverage and quality.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,4 +23,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Test
-        run: pnpm test
+        run: pnpm coverage
+        working-directory: packages/zod-request
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          flags: unittests
+          working-directory: packages/zod-request
